# Guardian-Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.web  README.md  conftest.py  docker-compose.yml  inference.py  openenv.yaml  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  requirements.txt  test_grader_direct.py  test_live_space.py  validate_submission.py
.agents/: agent_assets_metadata.toml
artifacts/api-server/: package.json
artifacts/api-server/scripts/: run-tests.mjs
artifacts/api-server/src/: app.ts
artifacts/api-server/tests/: logic.test.ts
artifacts/guardian-agent/: index.html  package.json  vite.config.ts
artifacts/guardian-agent/.replit-artifact/: artifact.toml
artifacts/guardian-extension/: README.md  background.js  content-script.js  manifest.json  page-heuristics.js  popup.css  popup.html  popup.js
attached_assets/: Pasted-markdown-Guardian-Agent-Complete-Project-Breakdown-A-Ma_1775547358251.txt
docs/: production-roadmap.md
guardian_openenv/: __init__.py  baseline.py  client.py  environment.py  graders.py  inference_runtime.py  models.py  task_graders.py  tasks.py
lib/api-spec/: openapi.yaml
outputs/: baseline_scores.json  inference_scores.json
scripts/: dev-api.mjs  dev-workspace.mjs  preinstall.mjs
server/: app.py
tasks/: __init__.py
tasks/airline_seat_upsell_gauntlet/: __init__.py  grader.py
tasks/marketplace_ghost_checkout/: __init__.py  grader.py
tasks/value_hotel_budget_guard/: __init__.py  grader.py
tests/: test_environment.py
(+38 files in other folders)
