[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-openenv"
version = "0.1.0"
description = "OpenEnv-compatible dark-pattern triage environment built from the Guardian Agent domain."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "openenv-core>=0.1.0",
  "openai>=1.99.0,<2.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["guardian_openenv", "server"]
